styles - fixing links and wrapping near the medium breakpoint

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@
 
 .flex-container {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     margin: 0 auto;
     max-width: 60rem;
 }
@@ -29,12 +29,14 @@
 }
 
 @media (max-width: $breakpoint-medium) {
+    .flex-container {
+        flex-flow: row wrap;
+    }
     .container {
         max-width: none;
     }
-
     .secondary-container {
         flex: 1 100%;
-        max-width: inherit;
+        max-width: 100vw;
     }
 }
