--- a/_sass/_posts-by-date.scss
+++ b/_sass/_posts-by-date.scss
@@ -10,8 +10,9 @@
         white-space: nowrap;
         display: block;
 
-        @media (max-width: $breakpoint-medium) {
+         @media (max-width: $breakpoint-medium) {
             display: inline-block;
+            max-width: 100%;
         }
     }
 }
